testcases/error/unknown_msb.veryl
module unknown_msb {
    let _a: logic = $sv::A[msb];
}
